--- a/.github/workflows/nuget-stable-deploy.yml
+++ b/.github/workflows/nuget-stable-deploy.yml
@@ -14,10 +14,12 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Setup .NET SDK 6.0.x
+    - name: Setup .NET SDK
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: '6.0.x'
+        dotnet-version: |
+          6.0.x
+          8.0.x
 
     - name: Build with dotnet
       run: dotnet build --configuration Release
